force-app/main/default/objects/Dish__c/Dish__c.object-meta.xml
<CustomObject>
    <description>Menu dishes offered by a Pronto restaurant, including price, category, availability, prep time, and a consolidated allergen/ingredient summary. Drives the agent&apos;s menu sizing, recommendation, and allergy-filtering logic.</description>
    <label>Dish</label>
    <nameField>
        <label>Dish Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dishes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>