force-app/main/default/objects/Dish__c/fields/Allergens__c.field-meta.xml
<CustomField>
    <fullName>Allergens__c</fullName>
    <description>Consolidated allergen and ingredient summary for the dish. The agent compares this against customer allergies during the food-safety check.</description>
    <label>Allergens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>