force-app/main/default/objects/Dish__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Restaurant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dishes</relationshipLabel>
    <relationshipName>Dishes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>